fixing dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@ body {
 
 .App {
   width: 100%;
-  max-width: 500px;
+  max-width: 800px;
   background: white;
   padding: 20px;
   border-radius: 8px;
